--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,13 +6,31 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="mat-typography">
     <header>
       <img src="./assets/logo.jpeg" alt="StealthAI Logo" />
       <h1>StealthAI</h1>
     </header>
     <app-root></app-root>
     <footer>© 2025 StealthAI. All rights reserved.</footer>
+    <script>
+      document.addEventListener("click", (e) => {
+        if (!e.target.closest(".btn-assign")) {
+          document
+            .querySelectorAll(".popover")
+            .forEach((p) => p.classList.remove("show"));
+        }
+      });
+    </script>
   </body>
 </html>
